Use jquery for reset-password, fix loading z-index

--- a/static/style/auth0-global.css
+++ b/static/style/auth0-global.css
@@ -43,6 +43,7 @@ p {
 
 #loading {
   position: fixed;
+  z-index: 0;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -60,6 +61,8 @@ p {
 }
 
 #form {
+  position: relative;
+  z-index: 1;
   width: 90%;
   max-width: 400px;
   margin: 20px auto 100px;
